Базовая разметка блоков

--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <title>Nerds</title>
 </head>
 <body>
+    <header class="page-header">
 
+    </header>
+    <main class="page-main">
+        <section class="slider">
+            
+        </section>
+        <section class="categories">
+
+        </section>
+        <section class="advantages">
+
+        </section>
+        <section class="partners">
+
+        </section>
+    </main>
+    <footer class="page-footer">
+
+    </footer>
 </body>
 </html>
