--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
 </head>
 <body>
     <header class="page-header">
-
+        <img src="" alt="Логотип">
+        <ul class="main-menu">
+            <li><a href="#">Студия</a></li>
+            <li><a href="#">Клиенты</a></li>
+            <li><a href="#">Магазин</a></li>
+            <li><a href="#">Контакты</a></li>
+        </ul>
+        <ul class="cart">
+            <li><a href="#">Корзина</a></li>
+        </ul>
     </header>
     <main class="page-main">
         <section class="slider">
-            
+
         </section>
         <section class="categories">
 
