Разметли секцию - "слайдер"

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     </header>
     <main class="page-main">
         <section class="slider">
-
+            <h1 class="visually-hidden">Нёрдс - дизайн-студия из Краснодара</h1>
+            <h2 class="visually-hidden">Слайдер с возможностями</h2>
+            <p class="slider__big-p">Долго, дорого, скрупулезно.</p>
+            <p class="slider__p">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+            <a class="slider__button" href="#">Узнать больше</a>
         </section>
         <section class="categories">
 
