Разметил секцию - "категории"

--- a/index.html
+++ b/index.html
@@ -29,7 +29,24 @@
             <a class="slider__button" href="#">Узнать больше</a>
         </section>
         <section class="categories">
-
+            <h2 class="visually-hidden">Категории услуг</h2>
+            <ul class="categories__items">
+                <li class="categories__item">
+                    <h3 class="categories__h3">Веб-сайты</h3>
+                    <p class="categories__p">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+                    <a class="categories__button" href="#">Заказать</a>
+                </li>
+                <li class="categories__item">
+                    <h3 class="categories__h3">Приложения</h3>
+                    <p class="categories__p">Покорите топ-10 приложений в AppStore и Google Play</p>
+                    <a class="categories__button" href="#">Заказать</a>
+                </li>
+                <li class="categories__item">
+                    <h3 class="categories__h3">Презентации</h3>
+                    <p class="categories__p">Вы даже не подозреваете, насколько вы изумительны!</p>
+                    <a class="categories__button" href="#">Заказать</a>
+                </li>
+            </ul>
         </section>
         <section class="advantages">
 
