Изменил название секции - "преимущества" на - "о нас"

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </li>
             </ul>
         </section>
-        <section class="advantages">
+        <section class="about-us">
 
         </section>
         <section class="partners">
