--- a/index.html
+++ b/index.html
@@ -49,7 +49,30 @@
             </ul>
         </section>
         <section class="about-us">
-
+            <h2 class="visually-hidden">О нас</h2>
+            <p class="about-us__big-p">Мы — маленькая, но гордая дизайн-студия из Краснодара. </p>
+            <p class="about-us__p">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+            <ul class="about-us__orders">
+                <h3 class="about-us__h3">Выполняем заказы на разработку:</h3>
+                <li class="about-us__orders-item">Веб-сайтов любой сложности</li>
+                <li class="about-us__orders-item">Мобильных приложений для iOS и Android</li>
+                <li class="about-us__orders-item">Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
+            <ul class="about-us__percents">
+                <h3 class="about-us__h3">с 2004 года Любим точность во всем:</h3>
+                <li class="about-us__percents-item">
+                    <p class="about-us__big-p">146<sup>%</sup></p>
+                    <p class="about-us__p">Уровень самоотдачи</p>
+                </li>
+                <li class="about-us__percents-item">
+                    <p class="about-us__big-p">100<sup>%</sup></p>
+                    <p class="about-us__p">Соблюдение сроков</p>
+                </li>
+                <li class="about-us__percents-item">
+                    <p class="about-us__big-p">50<sup>%</sup></p>
+                    <p class="about-us__p">Минимальная предоплата</p>
+                </li>
+            </ul>
         </section>
         <section class="partners">
 
