Разметил секцию - "партнёры"

--- a/index.html
+++ b/index.html
@@ -75,7 +75,13 @@
             </ul>
         </section>
         <section class="partners">
-
+            <h2 class="visually-hidden">Партнёры</h2>
+            <ul class="partners__list">
+                <li class="partners__item"><a class="partners__a"><img src="" alt="html academy"></a></li>
+                <li class="partners__item"><a class="partners__a"><img src="" alt="barbershop borodinski"></a></li>
+                <li class="partners__item"><a class="partners__a"><img src="" alt="pink"></a></li>
+                <li class="partners__item"><a class="partners__a"><img src="" alt="mishka"></a></li>
+            </ul>
         </section>
     </main>
     <footer class="page-footer">
