--- a/index.html
+++ b/index.html
@@ -85,7 +85,25 @@
         </section>
     </main>
     <footer class="page-footer">
-
+        <h2 class="visually-hidden">Футер</h2>
+        <section class="adress">
+            <h3 class="adress__h3">NЁRDS DESIGN STUDIO</h3>
+            <p class="adress__p">191186, Санкт-Петербург,
+                <br>
+                ул. Б. Конюшенная, д. 19/8
+                <br>
+                тел. +7 (812) 275-75-75</p>
+            <button class="adress__button">Напишите нам</button>
+        </section>
+        <section class="friendship">
+            <ul class="friendship__social">
+                <li class="friendship"><a class="friendship__link" href="#"><img src="" class="friendship__img" alt="В контакте"></a></li>
+                <li class="friendship"><a class="friendship__link" href="#"><img src="" class="friendship__img" alt="Фейсбук"></a></li>
+                <li class="friendship"><a class="friendship__link" href="#"><img src="" class="friendship__img" alt="Инстаграм"></a></li>
+            </ul>
+            <p class="friendship__big-p">Давайте дружить, это выгодно!</p>
+            <p class="friendship__p">Скидка 10% для друзей из социальных сетей.</p>
+        </section>
     </footer>
 </body>
 </html>
