--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <header class="page-header">
-        <img src="" alt="Логотип">
-        <ul class="main-menu">
-            <li><a href="#">Студия</a></li>
-            <li><a href="#">Клиенты</a></li>
-            <li><a href="#">Магазин</a></li>
-            <li><a href="#">Контакты</a></li>
-        </ul>
-        <ul class="cart">
-            <li><a href="#">Корзина</a></li>
-        </ul>
-    </header>
-    <main class="page-main">
+        <nav class="main-nav">
+            <img src="" alt="Логотип">
+            <ul class="main-nav__main-menu">
+                <li><a class="main-nav__link" href="#">Студия</a></li>
+                <li><a class="main-nav__link" href="#">Клиенты</a></li>
+                <li><a class="main-nav__link" href="#">Магазин</a></li>
+                <li><a class="main-nav__link" href="#">Контакты</a></li>
+            </ul>
+            <ul class="main-nav__cart">
+                <li><a class="main-nav__cart-link" href="#">Корзина</a></li>
+            </ul>
+        </nav>
         <section class="slider">
             <h1 class="visually-hidden">Нёрдс - дизайн-студия из Краснодара</h1>
             <h2 class="visually-hidden">Слайдер с возможностями</h2>
@@ -28,6 +28,8 @@
             <p class="slider__p">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
             <a class="slider__button" href="#">Узнать больше</a>
         </section>
+    </header>
+    <main class="page-main">
         <section class="categories">
             <h2 class="visually-hidden">Категории услуг</h2>
             <ul class="categories__items">
