--- a/index.html
+++ b/index.html
@@ -107,5 +107,19 @@
             <p class="friendship__p">Скидка 10% для друзей из социальных сетей.</p>
         </section>
     </footer>
+
+    <div class="popup-write-us">
+        <form class="write-us" method="post" action="http://echo.htmlacademy.ru">
+            <h2 class="write-us__h2">Напишите нам</h2>
+            <button class="write-us__close" title="Закрыть">X</button>
+            <label for="name">Имя:</label>
+            <input class="write-us__name" id="name" type="text" placeholder="Имя Фамилия">
+            <label for="mail">Ваш e-mail:</label>
+            <input class="write-us__mail" id="mail" type="email" placeholder="email@example.com">
+            <label for="message">Текст письма:</label>
+            <textarea class="write-us__message" id="message" cols="5" placeholder="В свободной форме"></textarea>
+            <button class="write-us__submit" type="submit">Отправить</button>
+        </form>
+    </div>
 </body>
 </html>
