--- a/index.html
+++ b/index.html
@@ -22,11 +22,30 @@
             </ul>
         </nav>
         <section class="slider">
-            <h1 class="visually-hidden">Нёрдс - дизайн-студия из Краснодара</h1>
-            <h2 class="visually-hidden">Слайдер с возможностями</h2>
-            <p class="slider__big-p">Долго, дорого, скрупулезно.</p>
-            <p class="slider__p">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-            <a class="slider__button" href="#">Узнать больше</a>
+            <div class="slider__item">
+                <h1 class="visually-hidden">Нёрдс - дизайн-студия из Краснодара</h1>
+                <h2 class="visually-hidden">Слайдер с возможностями</h2>
+                <p class="slider__big-p">Долго, дорого, скрупулезно.</p>
+                <p class="slider__p">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+                <a class="slider__button" href="#">Узнать больше</a>
+            </div>
+            <div class="slider__item">
+                <h1 class="visually-hidden">Нёрдс - дизайн-студия из Краснодара</h1>
+                <h2 class="visually-hidden">Слайдер с возможностями</h2>
+                <p class="slider__big-p">Любим математику как никто другой</p>
+                <p class="slider__p">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+                <a class="slider__button" href="#">Узнать больше</a>
+            </div>
+            <div class="slider__item">
+                <h1 class="visually-hidden">Нёрдс - дизайн-студия из Краснодара</h1>
+                <h2 class="visually-hidden">Слайдер с возможностями</h2>
+                <p class="slider__big-p">Только ночь, только хардкор</p>
+                <p class="slider__p">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+                <a class="slider__button" href="#">Узнать больше</a>
+            </div>
+            <input class="slider__controls" type="radio" name="slider__controls" value="slide-1" checked>
+            <input class="slider__controls" type="radio" name="slider__controls" value="slide-2">
+            <input class="slider__controls" type="radio" name="slider__controls" value="slide-3">
         </section>
     </header>
     <main class="page-main">
