--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="page-header">
         <nav class="main-nav">
-            <img src="" alt="Логотип">
+            <img src="img/nerds-logo.svg" alt="Логотип">
             <ul class="main-nav__main-menu">
                 <li><a class="main-nav__link" href="#">Студия</a></li>
                 <li><a class="main-nav__link" href="#">Клиенты</a></li>
@@ -98,10 +98,10 @@
         <section class="partners">
             <h2 class="visually-hidden">Партнёры</h2>
             <ul class="partners__list">
-                <li class="partners__item"><a class="partners__a"><img src="" alt="html academy"></a></li>
-                <li class="partners__item"><a class="partners__a"><img src="" alt="barbershop borodinski"></a></li>
-                <li class="partners__item"><a class="partners__a"><img src="" alt="pink"></a></li>
-                <li class="partners__item"><a class="partners__a"><img src="" alt="mishka"></a></li>
+                <li class="partners__item"><a class="partners__a"><img src="img/html-academy.png" alt="html academy"></a></li>
+                <li class="partners__item"><a class="partners__a"><img src="img/barbershop-borodinski.png" alt="barbershop borodinski"></a></li>
+                <li class="partners__item"><a class="partners__a"><img src="img/pink.png" alt="pink"></a></li>
+                <li class="partners__item"><a class="partners__a"><img src="img/mishka.png" alt="mishka"></a></li>
             </ul>
         </section>
     </main>
@@ -118,9 +118,9 @@
         </section>
         <section class="friendship">
             <ul class="friendship__social">
-                <li class="friendship"><a class="friendship__link" href="#"><img src="" class="friendship__img" alt="В контакте"></a></li>
-                <li class="friendship"><a class="friendship__link" href="#"><img src="" class="friendship__img" alt="Фейсбук"></a></li>
-                <li class="friendship"><a class="friendship__link" href="#"><img src="" class="friendship__img" alt="Инстаграм"></a></li>
+                <li class="friendship"><a class="friendship__link" href="#"><img src="img/vk-icon.svg" class="friendship__img" alt="В контакте"></a></li>
+                <li class="friendship"><a class="friendship__link" href="#"><img src="img/fb-icon.svg" class="friendship__img" alt="Фейсбук"></a></li>
+                <li class="friendship"><a class="friendship__link" href="#"><img src="img/insta-icon.svg" class="friendship__img" alt="Инстаграм"></a></li>
             </ul>
             <p class="friendship__big-p">Давайте дружить, это выгодно!</p>
             <p class="friendship__p">Скидка 10% для друзей из социальных сетей.</p>
