--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nerds</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -116,7 +116,7 @@
                 ул. Б. Конюшенная, д. 19/8
                 <br>
                 тел. +7 (812) 275-75-75</p>
-            <button class="adress__button">Напишите нам</button>
+            <a class="adress__button" href="#">Напишите нам</a>
         </section>
         <section class="friendship">
             <ul class="friendship__social">
