Добавил интерактивные стили

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header class="page-header">
         <div class="wrapper-center-header">
             <nav class="main-nav">
-                <img src="img/nerds-logo.svg" alt="Логотип">
+                <a class="main-nav__logo"><img src="img/nerds-logo.svg" alt="Логотип"></a>
                 <ul class="main-nav__main-menu">
-                    <li><a class="main-nav__link" href="#">Студия</a></li>
+                    <li><a class="main-nav__link main-nav__link-active" href="#">Студия</a></li>
                     <li><a class="main-nav__link" href="#">Клиенты</a></li>
                     <li><a class="main-nav__link" href="#">Магазин</a></li>
                     <li><a class="main-nav__link" href="#">Контакты</a></li>
@@ -25,23 +25,19 @@
                 </ul>
             </nav>
             <section class="slider">
+                <h1 class="visually-hidden">Нёрдс - дизайн-студия из Краснодара</h1>
+                <h2 class="visually-hidden">Слайдер с возможностями</h2>
                 <div class="slider__item">
-                    <h1 class="visually-hidden">Нёрдс - дизайн-студия из Краснодара</h1>
-                    <h2 class="visually-hidden">Слайдер с возможностями</h2>
                     <p class="slider__big-p">Долго, дорого, скрупулезно.</p>
                     <p class="slider__p">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
                     <a class="slider__button" href="#">Узнать больше</a>
                 </div>
                 <div class="slider__item">
-                    <h1 class="visually-hidden">Нёрдс - дизайн-студия из Краснодара</h1>
-                    <h2 class="visually-hidden">Слайдер с возможностями</h2>
                     <p class="slider__big-p">Любим математику как никто другой</p>
                     <p class="slider__p">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
                     <a class="slider__button" href="#">Узнать больше</a>
                 </div>
                 <div class="slider__item">
-                    <h1 class="visually-hidden">Нёрдс - дизайн-студия из Краснодара</h1>
-                    <h2 class="visually-hidden">Слайдер с возможностями</h2>
                     <p class="slider__big-p">Только ночь, только хардкор</p>
                     <p class="slider__p">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
                     <a class="slider__button" href="#">Узнать больше</a>
@@ -106,13 +102,13 @@
         <section class="partners">
             <h2 class="visually-hidden">Партнёры</h2>
             <ul class="partners__list">
-                <li class="partners__item"><a class="partners__a"><img src="img/html-academy.png" alt="html academy"></a></li>
+                <li class="partners__item"><a class="partners__link" href="#"><img src="img/html-academy.png" alt="html academy"></a></li>
                 <li class="partners__item"><img src="img/partners-ruler.png"></li>
-                <li class="partners__item"><a class="partners__a"><img src="img/barbershop-borodinski.png" alt="barbershop borodinski"></a></li>
+                <li class="partners__item"><a class="partners__link" href="#"><img src="img/barbershop-borodinski.png" alt="barbershop borodinski"></a></li>
                 <li class="partners__item"><img src="img/partners-ruler.png"></li>
-                <li class="partners__item"><a class="partners__a"><img src="img/pink.png" alt="pink"></a></li>
+                <li class="partners__item"><a class="partners__link" href="#"><img src="img/pink.png" alt="pink"></a></li>
                 <li class="partners__item"><img src="img/partners-ruler.png"></li>
-                <li class="partners__item"><a class="partners__a"><img src="img/mishka.png" alt="mishka"></a></li>
+                <li class="partners__item"><a class="partners__link" href="#"><img src="img/mishka.png" alt="mishka"></a></li>
             </ul>
         </section>
     </main>
