--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a class="main-nav__link" href="#">Контакты</a></li>
                 </ul>
                 <ul class="main-nav__cart">
-                    <li><a class="main-nav__cart-link" href="#">Корзина</a></li>
+                    <li><a class="main-nav__cart-link main-nav__cart-link-active" href="#">Корзина</a></li>
                 </ul>
             </nav>
             <section class="slider">
