--- a/index.html
+++ b/index.html
@@ -139,18 +139,33 @@
         </section>
     </footer>
 
-    <div class="popup-write-us">
-        <form class="write-us" method="post" action="http://echo.htmlacademy.ru">
-            <h2 class="write-us__h2">Напишите нам</h2>
-            <button class="write-us__close" title="Закрыть">X</button>
-            <label for="name">Имя:</label>
-            <input class="write-us__name" id="name" type="text" placeholder="Имя Фамилия">
-            <label for="mail">Ваш e-mail:</label>
-            <input class="write-us__mail" id="mail" type="email" placeholder="email@example.com">
-            <label for="message">Текст письма:</label>
-            <textarea class="write-us__message" id="message" cols="5" placeholder="В свободной форме"></textarea>
-            <button class="write-us__submit" type="submit">Отправить</button>
-        </form>
+    <div class="popup">
+        <div class="popup-write-us__overlay"></div>
+        <div class="popup-write-us">
+
+            <form class="write-us" method="post" action="http://echo.htmlacademy.ru">
+                <button class="write-us__close" title="Закрыть"></button>
+                <div class="write-us__container">
+                    <h2 class="write-us__h2">Напишите нам</h2>
+                    <div class="write-us__element">
+                        <label for="name">Имя:</label>
+                        <br>
+                        <input class="write-us__name" id="name" type="text" placeholder="Имя Фамилия">
+                    </div>
+                    <div class="write-us__element">
+                        <label for="mail">Ваш e-mail:</label>
+                        <br>
+                        <input class="write-us__mail" id="mail" type="email" placeholder="email@example.com">
+                    </div>
+                    <div class="write-us__element">
+                        <label for="message">Текст письма:</label>
+                        <br>
+                        <textarea class="write-us__message" id="message" cols="5" placeholder="В свободной форме"></textarea>
+                    </div>
+                    <button class="write-us__submit" type="submit">Отправить</button>
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 </html>
