Написал базовый скрипт для попапа

--- a/index.html
+++ b/index.html
@@ -167,5 +167,21 @@
             </form>
         </div>
     </div>
+
+    <script>
+        var popup = document.querySelector(".popup");
+        var popupOpen = document.querySelector(".adress__button");
+        var popupClose = popup.querySelector(".write-us__close");
+
+        popupOpen.addEventListener ("click", function(evt) {
+            evt.preventDefault();
+            popup.classList.add("popup-show");
+        });
+
+        popupClose.addEventListener("click", function (evt) {
+            evt.preventDefault();
+            popup.classList.remove("popup-show")
+        });
+    </script>
 </body>
 </html>
