--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
         popupClose.addEventListener("click", function (evt) {
             evt.preventDefault();
-            popup.classList.remove("popup-show")
+            popup.classList.remove("popup-show");
         });
     </script>
 </body>
