--- a/index.html
+++ b/index.html
@@ -168,20 +168,6 @@
         </div>
     </div>
 
-    <script>
-        var popup = document.querySelector(".popup");
-        var popupOpen = document.querySelector(".adress__button");
-        var popupClose = popup.querySelector(".write-us__close");
-
-        popupOpen.addEventListener ("click", function(evt) {
-            evt.preventDefault();
-            popup.classList.add("popup-show");
-        });
-
-        popupClose.addEventListener("click", function (evt) {
-            evt.preventDefault();
-            popup.classList.remove("popup-show");
-        });
-    </script>
+    <script src="js/js.js"></script>
 </body>
 </html>
