Доделал переключатели слайдера

--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
                     <a class="slider__button" href="#">Узнать больше</a>
                 </div>
                 <form class="slider-controls-group" name="slider">
-                    <input class="slider__controls" type="radio" name="slider__controls" value="slide-1" checked>
-                    <input class="slider__controls" type="radio" name="slider__controls" value="slide-2">
-                    <input class="slider__controls" type="radio" name="slider__controls" value="slide-3">
+                    <input class="slider__controls" type="radio" name="slider__controls" id="slider-1" value="slide-1" checked>
+                    <label class="slider__label" for="slider-1"></label>
+                    <input class="slider__controls" type="radio" name="slider__controls" id="slider-2" value="slide-2">
+                    <label class="slider__label" for="slider-2"></label>
+                    <input class="slider__controls" type="radio" name="slider__controls" id="slider-3" value="slide-3">
+                    <label class="slider__label" for="slider-3"></label>
                 </form>
             </section>
         </div>
