Сделал заготовку внутренней страницы

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <nav class="main-nav">
                 <a class="main-nav__logo"><img src="img/nerds-logo.svg" alt="Логотип"></a>
                 <ul class="main-nav__main-menu">
-                    <li><a class="main-nav__link main-nav__link-active" href="#">Студия</a></li>
+                    <li><a class="main-nav__link" href="#">Студия</a></li>
                     <li><a class="main-nav__link" href="#">Клиенты</a></li>
-                    <li><a class="main-nav__link" href="#">Магазин</a></li>
+                    <li><a class="main-nav__link" href="inner-page.html">Магазин</a></li>
                     <li><a class="main-nav__link" href="#">Контакты</a></li>
                 </ul>
                 <ul class="main-nav__cart">
-                    <li><a class="main-nav__cart-link main-nav__cart-link-active" href="#">Корзина</a></li>
+                    <li><a class="main-nav__cart-link" href="#">Корзина</a></li>
                 </ul>
             </nav>
             <section class="slider">
