--- a/inner-page.html
+++ b/inner-page.html
@@ -25,7 +25,37 @@
         <h1 class="inner-page-header__h1">Магазин готовых шаблонов</h1>
     </header>
     <main class="inner-page">
+        <aside class="filter">
+            <h2 class="filter__h2">Стоимость:</h2>
+            <form class="filter__form" oninput="priceOutputMin.value=priceInputMin.value, priceOutputMax.value=priceInputMax.value">
+                <input type="range" name="priceInputMin" min="0" max="15000">
+                <input type="range" name="priceInputMax" min="0" max="15000">
+                <label>От
+                    <output name="priceOutputMin">0</output>
+                </label>
+                <label>До
+                    <output name="priceOutputMax">15000</output>
+                </label>
+                <fieldset>
+                    <legend>Сетка:</legend>
+                    <label><input type="radio" name="grid" checked>Адаптивная</label>
+                    <label><input type="radio" name="grid">Фиксированная</label>
+                    <label><input type="radio" name="grid">Резиновая</label>
+                </fieldset>
+                <fieldset>
+                    <legend>Особенности:</legend>
+                    <label><input type="checkbox">Слайдер</label>
+                    <label><input type="checkbox">Блок преимуществ</label>
+                    <label><input type="checkbox">Новости</label>
+                    <label><input type="checkbox">Галерея</label>
+                    <label><input type="checkbox">Корзина</label>
+                </fieldset>
+                <button class="filter__button">Показать</button>
+            </form>
+        </aside>
+        <section class="products">
 
+        </section>
     </main>
     <footer class="page-footer">
         <h2 class="visually-hidden">Футер</h2>
