--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nerds</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+
+    <link href="css/styles.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header class="page-header">
@@ -90,15 +90,15 @@
                 <h3 class="about-us__h3_centered">с 2004 года Любим точность во всем:</h3>
                 <ul class="about-us__percents">
                     <li class="about-us__percents-item">
-                        <p class="about-us__big-p">146<sup>%</sup></p>
+                        <p class="about-us__big-p">146<sup class="about-us__sup">%</sup></p>
                         <p class="about-us__p">Уровень самоотдачи</p>
                     </li>
                     <li class="about-us__percents-item">
-                        <p class="about-us__big-p">100<sup>%</sup></p>
+                        <p class="about-us__big-p">100<sup class="about-us__sup">%</sup></p>
                         <p class="about-us__p">Соблюдение сроков</p>
                     </li>
                     <li class="about-us__percents-item">
-                        <p class="about-us__big-p">50<sup>%</sup></p>
+                        <p class="about-us__big-p">50<sup class="about-us__sup">%</sup></p>
                         <p class="about-us__p">Минимальная предоплата</p>
                     </li>
                 </ul>
@@ -173,6 +173,6 @@
         </div>
     </div>
 
-    <script src="js/js.js"></script>
+    <script src="js/js.min.js"></script>
 </body>
 </html>
