--- a/inner-page.html
+++ b/inner-page.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Магазин</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+
+    <link href="css/styles.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header class="page-header">
@@ -31,25 +31,69 @@
             <form class="filter__form" oninput="priceOutputMin.value=priceInputMin.value, priceOutputMax.value=priceInputMax.value">
                 <input type="range" name="priceInputMin" min="0" max="15000">
                 <input type="range" name="priceInputMax" min="0" max="15000">
-                <label>От
+                <br>
+                <label class="filter__label">От
                     <output name="priceOutputMin">0</output>
                 </label>
-                <label>До
+                <label class="filter__label">До
                     <output name="priceOutputMax">15000</output>
                 </label>
-                <fieldset>
-                    <legend>Сетка:</legend>
-                    <label><input type="radio" name="grid" checked>Адаптивная</label>
-                    <label><input type="radio" name="grid">Фиксированная</label>
-                    <label><input type="radio" name="grid">Резиновая</label>
+                <fieldset class="filter__fieldset">
+                    <legend class="filter__legend">Сетка:</legend>
+                    <input class="filter__radio" type="radio" name="grid" id="filter__radio-1" checked>
+                    <label class="filter__label-radio" for="filter__radio-1">
+                        <svg class="filter__radio-off" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"><path d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/></svg>
+                        <svg class="filter__radio-on" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"><path d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/><circle cx="12.5" cy="12.5" r="4.5"/></svg>
+                        Адаптивная</label>
+                    <br>
+                    <input class="filter__radio" type="radio" name="grid" id="filter__radio-2">
+                    <label class="filter__label-radio" for="filter__radio-2">
+                        <svg class="filter__radio-off" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"><path d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/></svg>
+                        <svg class="filter__radio-on" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"><path d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/><circle cx="12.5" cy="12.5" r="4.5"/></svg>
+                        Фиксированная</label>
+                    <br>
+                    <input class="filter__radio" type="radio" name="grid" id="filter__radio-3">
+                    <label class="filter__label-radio" for="filter__radio-3">
+                        <svg class="filter__radio-off" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"><path d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/></svg>
+                        <svg class="filter__radio-on" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"><path d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/><circle cx="12.5" cy="12.5" r="4.5"/></svg>
+                        Резиновая</label>
                 </fieldset>
-                <fieldset>
-                    <legend>Особенности:</legend>
-                    <label><input type="checkbox">Слайдер</label>
-                    <label><input type="checkbox">Блок преимуществ</label>
-                    <label><input type="checkbox">Новости</label>
-                    <label><input type="checkbox">Галерея</label>
-                    <label><input type="checkbox">Корзина</label>
+                <fieldset class="filter__fieldset">
+                    <legend class="filter__legend">Особенности:</legend>
+                    <input class="filter__checkbox" type="checkbox" id="filter__checkbox-1">
+                    <label class="filter__label-checkbox" for="filter__checkbox-1">
+                        <svg class="filter__checkbox-off" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"><path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/></svg>
+                        <svg class="filter__checkbox-on" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23"><path d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/></svg>
+                        Слайдер
+                    </label>
+                    <br>
+                    <input class="filter__checkbox" type="checkbox" id="filter__checkbox-2">
+                    <label class="filter__label-checkbox" for="filter__checkbox-2">
+                        <svg class="filter__checkbox-off" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"><path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/></svg>
+                        <svg class="filter__checkbox-on" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23"><path d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/></svg>
+                        Блок преимуществ
+                    </label>
+                    <br>
+                    <input class="filter__checkbox" type="checkbox" id="filter__checkbox-3">
+                    <label class="filter__label-checkbox" for="filter__checkbox-3">
+                        <svg class="filter__checkbox-off" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"><path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/></svg>
+                        <svg class="filter__checkbox-on" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23"><path d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/></svg>
+                        Новости
+                    </label>
+                    <br>
+                    <input class="filter__checkbox" type="checkbox" id="filter__checkbox-4">
+                    <label class="filter__label-checkbox" for="filter__checkbox-4">
+                        <svg class="filter__checkbox-off" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"><path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/></svg>
+                        <svg class="filter__checkbox-on" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23"><path d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/></svg>
+                        Галерея
+                    </label>
+                    <br>
+                    <input class="filter__checkbox" type="checkbox" id="filter__checkbox-5">
+                    <label class="filter__label-checkbox" for="filter__checkbox-5">
+                        <svg class="filter__checkbox-off" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"><path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/></svg>
+                        <svg class="filter__checkbox-on" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23"><path d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/></svg>
+                        Корзина
+                    </label>
                 </fieldset>
                 <button class="filter__button">Показать</button>
             </form>
@@ -59,16 +103,24 @@
             <div class="products__sorting">
                 <h3 class="products__h3">Сортировать:</h3>
                 <ul class="products__sort">
-                    <li><a class="products__sort-option">По цене</a></li>
-                    <li><a class="products__sort-option">По типу</a></li>
-                    <li><a class="products__sort-option">По названию</a></li>
-                    <li><a class="products__sort-option">По убыванию</a></li>
-                    <li><a class="products__sort-option">По возрастанию</a></li>
+                    <li><a class="products__sort-option" href="#">По цене</a></li>
+                    <li><a class="products__sort-option" href="#">По типу</a></li>
+                    <li><a class="products__sort-option" href="#">По названию</a></li>
+                    <li><a class="products__sort-option" href="#">
+                        <svg class="products__sort-icon-down" xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 10L0 0h11"/></svg>
+                        <span class="visually-hidden">По убыванию</span></a></li>
+                    <li><a class="products__sort-option" href="#">
+                        <svg class="products__sort-icon-up" xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 0L0 10h11z"/></svg>
+                        <span class="visually-hidden">По возрастанию</span></a></li>
                 </ul>
             </div>
             <div class="products__items">
                 <div class="products__item">
-                    <div class="products__item-header"></div>
+                    <div class="products__item-header">
+                        <div class="products__item-header-circle"></div>
+                        <div class="products__item-header-circle"></div>
+                        <div class="products__item-header-circle"></div>
+                    </div>
                     <img class="products__img" src="img/img-sedona.jpg.jpg" width="360px" height="576px">
                     <div class="products__info">
                         <h4 class="products__h4">Sedona</h4>
@@ -77,7 +129,11 @@
                     </div>
                 </div>
                 <div class="products__item">
-                    <div class="products__item-header"></div>
+                    <div class="products__item-header">
+                        <div class="products__item-header-circle"></div>
+                        <div class="products__item-header-circle"></div>
+                        <div class="products__item-header-circle"></div>
+                    </div>
                     <img class="products__img" src="img/img-pink.jpg" width="360px" height="576px">
                     <div class="products__info">
                         <h4 class="products__h4">Pink</h4>
@@ -86,7 +142,11 @@
                     </div>
                 </div>
                 <div class="products__item">
-                    <div class="products__item-header"></div>
+                    <div class="products__item-header">
+                        <div class="products__item-header-circle"></div>
+                        <div class="products__item-header-circle"></div>
+                        <div class="products__item-header-circle"></div>
+                    </div>
                     <img class="products__img" src="img/img-barbershop.jpg.jpg" width="360px" height="576px">
                     <div class="products__info">
                         <h4 class="products__h4">Borodinski</h4>
@@ -95,7 +155,11 @@
                     </div>
                 </div>
                 <div class="products__item">
-                    <div class="products__item-header"></div>
+                    <div class="products__item-header">
+                        <div class="products__item-header-circle"></div>
+                        <div class="products__item-header-circle"></div>
+                        <div class="products__item-header-circle"></div>
+                    </div>
                     <img class="products__img" src="img/img-mishka.jpg.jpg" width="360px" height="576px">
                     <div class="products__info">
                         <h4 class="products__h4">Mishka</h4>
@@ -104,7 +168,11 @@
                     </div>
                 </div>
                 <div class="products__item">
-                    <div class="products__item-header"></div>
+                    <div class="products__item-header">
+                        <div class="products__item-header-circle"></div>
+                        <div class="products__item-header-circle"></div>
+                        <div class="products__item-header-circle"></div>
+                    </div>
                     <img class="products__img" src="img/img-aplus.jpg.jpg" width="360px" height="576px">
                     <div class="products__info">
                         <h4 class="products__h4">A+</h4>
@@ -113,7 +181,11 @@
                     </div>
                 </div>
                 <div class="products__item">
-                    <div class="products__item-header"></div>
+                    <div class="products__item-header">
+                        <div class="products__item-header-circle"></div>
+                        <div class="products__item-header-circle"></div>
+                        <div class="products__item-header-circle"></div>
+                    </div>
                     <img class="products__img" src="img/img-kvast.jpg.jpg" width="360px" height="576px">
                     <div class="products__info">
                         <h4 class="products__h4">Кваст</h4>
@@ -124,10 +196,10 @@
             </div>
             <div class="products__pagination">
                 <ul class="products__pagination-list">
-                    <li><a class="products__pagination-link">1</a></li>
-                    <li><a class="products__pagination-link">2</a></li>
-                    <li><a class="products__pagination-link">3</a></li>
-                    <li><a class="products__pagination-link">Следующая</a></li>
+                    <li><a class="products__pagination-link" href="#">1</a></li>
+                    <li><a class="products__pagination-link" href="#">2</a></li>
+                    <li><a class="products__pagination-link" href="#">3</a></li>
+                    <li><a class="products__pagination-link products__pagination-link_next" href="#">Следующая</a></li>
                 </ul>
             </div>
         </section>
@@ -187,6 +259,6 @@
         </div>
     </div>
 
-    <script src="js/js.js"></script>
+    <script src="js/js.min.js"></script>
 </body>
 </html>
